<resources>
    <string name="app_name">RestApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="sobrenosotros">Sobre Nosotros</string>
    <string name="menuDia">El Menú</string>
    <string name="carta">La Carta</string>
    <string name="entrantes">Entrantes</string>
    <string name="añadirMenu">Añadir menú 12€</string>
    <string name="contacto">Contacto</string>
    <string name="titolCarta">NUESTRA CARTA</string>
    <string name="entranteUno">Mejillones</string>
    <string name="entranteDos">Ensalada de cabra</string>
    <string name="entranteTres">Chopitos</string>
    <string name="entranteCuatro">Calamares a la plancha</string>
    <string name="principalUno">Entrecotte de ternera con patatas</string>
    <string name="principalDos">Lubina a la espalda</string>
    <string name="principalTres">Paella Valenciana</string>
    <string name="principalCuatro">Fideua de Gandia</string>
    <string name="postreUno">Tiramisu</string>
    <string name="postreDos">Flan de la casa</string>
    <string name="postreTres">Brownie con helado</string>
    <string name="postreCuatro">Fruta de temporada</string>
    <string name="inicio">Inicio</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activityssss">Map</string>
    <string name="titolCarrito">TU PEDIDO</string>
    <string name="titolConfirmar">Confirmar dirección</string>
    <string name="finalizar">Finalizar Pedido</string>
    <string name="totalComanda">TOTAL DEL PEDIDO</string>
    <string name="cartafirebase">Carta en firebase</string>
    <string name="login">Iniciar Sesión</string>
    <string name="emailinvalido">El email no es valido</string>
    <string name="pass">Debe contener almenos 6 digitos</string>
    <string name="confirPedido">Confirma tu pedido: </string>
    <string name="promo">Promociones</string>
</resources>