<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.aplicrestaurante.MainActivity">

    <item
        android:id="@+id/action_inicio"
        android:orderInCategory="100"
        android:title="@string/inicio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_promo"
        android:orderInCategory="100"
        android:title="@string/promo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sobreNosotros"
        android:orderInCategory="100"
        android:title="@string/sobrenosotros"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacto"
        android:orderInCategory="100"
        android:title="@string/contacto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never" />

    

</menu>