<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Carrito">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fondo4"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="142dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="@drawable/fondorecortado1"
            android:fontFamily="@font/caveat_brush"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/titolCarrito"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ListView
            android:id="@+id/comanda"
            android:layout_width="match_parent"
            android:layout_height="419dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/caveat_brush"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/totalComanda"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:fontFamily="@font/caveat_brush"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:fontFamily="@font/caveat_brush"
                android:text="€"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <Button
            android:id="@+id/comandaUpdate"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/finalizar"
            android:backgroundTint="@color/boton"
            android:fontFamily="@font/caveat_brush" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>